<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Моё Весёлое</string>
    <string name="btn_traffic">Транспорт</string>
    <string name="title_activity_tr_bus">Автобусы</string>
    <string name="title_activity_train">Поезда</string>
    <string name="title_activity_taxi">Такси</string>
    <string name="title_activity_freight_taxi">Грузовое такси</string>
    <string name="title_activity_delivery_service">Службы доставки</string>
    <string name="title_activity_fueling_service">Заправки</string>
    <string name="splash">Splash</string>
    <string name="title_activity_builder">BuilderActivity</string>
    <string name="tutors">Услуги\nрепетиторов</string>
    <string name="tutors_more">Услуги репетиторов</string>
    <string name="builder">Строительные\nработы</string>
    <string name="repairs">Ремонт\nтехники</string>
    <string name="home_master">Домашний\nмастер</string>
    <string name="business">Деловые\nуслуги</string>
    <string name="domestic">Бытовые\nуслуги</string>
    <string name="car">Ремонт\nавто</string>
    <string name="beauty">Услуги\nкрасоты</string>
    <string name="organization_of_holidays">Организация\nпраздников</string>
    <string name="development">Услуги\nIT-специалистов</string>
    <string name="title_activity_fueling">FuelingActivity</string>

    <string name="wait">wait…</string>
    <string name="title">Sample Activity #%d</string>
    <string name="watercanal">КП \"Водоканал\"</string>
    <string name="watercanal_more">Коммунальное предприятие  \"Водоканал\"</string>
    <string name="res">Веселовский РЕC</string>
    <string name="advert_save">Сохранить</string>
    <string name="advert_name">Заголовок</string>
    <string name="advert_more">Описание</string>
    <string name="advert_prise">Цена</string>
    <string name="advert_mob">Номер тел.</string>
    <string name="add_services">По вопросам размещения рекламы и сотрудничества обращаться по номеру:</string>
    <string name="add_advert_vesele">Добавить объявление</string>
    <string name="first_school">1 школа</string>
    <string name="second_school">2 школа</string>
    <string name="gymnasium">Гимназия</string>
    <string name="lyceum">Лицей</string>
    <string name="organization">"Организации\n"</string>
    <string name="educational_institution">Учебные\nзаведения</string>
    <string name="shops">"Магазины\n"</string>
    <string name="beauty_more">Услуги красоты и здоровья</string>
    <string name="billing_text">Функция добавления объявления платная. Оформите подписку, чтобы иметь возможность размещать объявления. Стоимость 30 грн/мес. Первые 3 дня бесплатно.</string>
    <string name="subscribe_text">Оформить подписку на 1 месяц</string>
    <string name="builder_more">Строительные работы</string>
    <string name="bus_veseloe_berdyansk">Веселое - Бердянск</string>
    <string name="from_bus_station">с Автовокзала</string>
    <string name="time_go">отправка</string>
    <string name="time_finish">прибытие</string>
    <string name="vesele_bus_station">Веселовская автостанция</string>
    <string name="bus_vesele_zp">Веселое - Запорожье</string>
    <string name="bus_vesele_melitopol">Веселое - Мелитополь</string>
    <string name="bus_vesele_bardyansk">Веселое - Бердянск</string>
    <string name="bus_vesele_bogdanovka">Веселое - Новобогдановка</string>
    <string name="bus_zp_vesele">Запорожье - Веселое</string>
    <string name="bus_melitopol_vesele">Мелитополь - Веселое</string>
    <string name="bus_vesele_kirilovka">Веселое - Кирилловка</string>
    <string name="bus_veseloe_melitopol">Веселое - Мелитополь</string>
    <string name="bus_melitopol_veseloe">Мелитополь - Веселое</string>
    <string name="bus_veseloe_novobogdanovka">Веселое - Новобогдановка</string>
    <string name="bus_veseloe_zp">Веселое - Запорожье</string>
    <string name="bus_zp_veseloe">Запорожье - Веселое</string>
    <string name="business_more">Деловые услуги</string>
    <string name="car_more">Ремонт авто</string>
    <string name="to_development">Раздел в разработке</string>
    <string name="delivery_service">Службы доставки</string>
    <string name="new_post">Нова пошта №1</string>
    <string name="new_post_more">Служба доставки писем и посылок, Московская, 21</string>
    <string name="in_time">In-Time</string>
    <string name="in_time_more">Почтовые услуги</string>
    <string name="in_time_street">ул. Волшебная, 143</string>
    <string name="it_servise">Услуги ИТ-специалистов</string>
    <string name="domestic_more">Бытовые услуги</string>
    <string name="freight_taxi">Грузовое такси</string>
    <string name="info_car_freight_taxi">Доставка груза</string>
    <string name="relevance">Актуальность:</string>
    <string name="organization_of_holidays_more">Организация праздников</string>
    <string name="home_master_more">Домашний мастер</string>
    <string name="watercanal_button">Водоканал</string>
    <string name="res_text_button">РЕС</string>
    <string name="repairs_more">Ремонт техники</string>
    <string name="res_adres">Адрес:</string>
    <string name="res_adres_more">72202, Запорожская область, Веселовский район, пгт Веселое, ул. Белорецкая, 131</string>
    <string name="res_tel">Телефон:</string>
    <string name="res_tel_more">0613621091</string>
    <string name="res_button_text">Подать показания электросчетчика</string>
    <string name="res_hint">*с целью корректного формирования счетов за потребленную электрическую энергию просим подавать показания на 1 (первое) число месяца.</string>
    <string name="add_services_buuton_text">Добавить услугу</string>
    <string name="sale">Акции</string>
    <string name="cheaper">Где дешевле?</string>
    <string name="watercanal_adress">Адрес:</string>
    <string name="watercanal_adress_more">72202, Запорожская область, Веселовский район, пгт Веселое, ул. Лесная, 25</string>
    <string name="watercanal_director">Руководитель:</string>
    <string name="watercanal_director_more">Кравцов Александр Сергеевич</string>
    <string name="watercanal_tel">Телефон:</string>
    <string name="watercanal_tel_more">0613621133</string>
    <string name="watercanal_text_button_add">Подать показания водомера</string>
    <string name="watercanal_text_button_site">Сайт</string>
    <string name="watercanal_text_button_renew">Обновить напоминание</string>
    <string name="nav_setting">Сменить язык</string>
    <string name="nav_logout">Выйти</string>
    <string name="choose_language">Выбрать язык...</string>

    <string name="activity_train_trolley_schedule">Расписание движения</string>
    <string name="activity_train_suburban_and_passenger_trains">пригородных и пассажирских поездов</string>
    <string name="activity_train_suburban_trains">Пригородные</string>
    <string name="activity_train_to_melitopol">На Мелитополь</string>
    <string name="activity_train_to_fedorivka">На Федоровку</string>
    <string name="activity_train_everyday">ежедневно</string>
    <string name="activity_train_passenger_trains">Пассажирские</string>
    <string name="activity_train_odessa_zp">Одесса - Запорожье</string>
    <string name="activity_train_herson_newvesele">Херсон - Нововеселая</string>
    <string name="activity_train_newvesele_herson">Нововеселая - Херсон</string>
    <string name="activity_train_zp_odessa">Запорожье  - Одесса</string>
    <string name="activity_train_paired">чётные</string>
    <string name="activity_train_notpaired">нечетные</string>
    <string name="watercanal_hint">*показания нужно подавать, до 25 числа, текущего месяца.</string>
    <string name="watercanal_hint_notification">*при перезагрузке устройства, смартфон очищает все напоминания, если перестало срабативать напоминание, нажми обновить напоминание.</string>
    <string name="activity_bus_zp_title_from_center">с центра напротив ДК</string>
    <string name="activity_bus_zp_bask_title_form_railway">c Ж/Д Запорожье 1</string>


</resources>
