<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/btn_add_services"
        style="@style/services_button"
        android:drawableLeft="@drawable/ic_library_add_grean_24dp"
        android:onClick="btnAddServices"
        android:text="Добавить услугу" />
</LinearLayout>
<android.support.v7.widget.GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    app:columnCount="2"
    app:orientation="horizontal">

    <Button
        android:id="@+id/btn_repairs"
        style="@style/services_button_two"
        app:layout_columnWeight="1"
        android:drawableTop="@drawable/repairs"
        android:onClick="btnRepairs"
        android:text="@string/repairs" />

    <Button
        android:id="@+id/btn_home_master"
        style="@style/services_button_two"
        app:layout_columnWeight="1"
        android:drawableTop="@drawable/home_master"
        android:onClick="btnHomeMaster"
        android:text="@string/home_master"/>

    <Button
        android:id="@+id/btn_builder"
        style="@style/services_button_two"
        app:layout_columnWeight="1"
        android:drawableTop="@drawable/builder"
        android:onClick="btnBuilder"
        android:text="@string/builder" />

    <Button
        android:id="@+id/btn_tutors"
        style="@style/services_button_two"
        app:layout_columnWeight="1"
        android:drawableTop="@drawable/tutors"
        android:onClick="btnTutors"
        android:text="@string/tutors"/>

    <Button
        android:id="@+id/btn_business"
        style="@style/services_button_two"
        app:layout_columnWeight="1"
        android:drawableTop="@drawable/business"
        android:onClick="btnBusiness"
        android:text="@string/business" />

    <Button
        android:id="@+id/btn_domestic"
        style="@style/services_button_two"
        app:layout_columnWeight="1"
        android:drawableTop="@drawable/domestic"
        android:onClick="btnDomestic"
        android:text="@string/domestic" />

    <Button
        android:id="@+id/btn_car"
        style="@style/services_button_two"
        app:layout_columnWeight="1"
        android:drawableTop="@drawable/car"
        android:onClick="btnCar"
        android:text="@string/car" />

    <Button
        android:id="@+id/btn_beauty"
        style="@style/services_button_two"
        app:layout_columnWeight="1"
        android:drawableTop="@drawable/beauty"
        android:onClick="btnBeauty"
        android:text="@string/beauty" />

</android.support.v7.widget.GridLayout >

</LinearLayout>