<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/myview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.artimanton.infovesele.activity.all_transport.BusCity"
    android:orientation="vertical">

    <Button
        style="@style/bus_city"
        android:id="@+id/btn_bus_station"
        android:onClick="BusStation"
        android:text="@string/vesele_bus_station"
        android:drawableLeft="@drawable/ic_bus_station"
        android:background="@drawable/border"
        android:layout_marginTop="10dp"/>

    <Button
        style="@style/bus_city"
        android:id="@+id/btn_zp"
        android:onClick="Zp"
        android:text="@string/bus_vesele_zp"
        android:drawableLeft="@drawable/ic_location_city_selector"
        android:background="@drawable/border" />


    <Button
        style="@style/bus_city"
        android:id="@+id/btn_melitopol"
        android:onClick="Melitopol"
        android:text="@string/bus_vesele_melitopol"
        android:drawableLeft="@drawable/ic_location_city_selector"
        android:background="@drawable/border"/>

    <Button
        style="@style/bus_city"
        android:id="@+id/btn_bardyansk"
        android:onClick="Bardyansk"
        android:text="@string/bus_vesele_bardyansk"
        android:drawableLeft="@drawable/ic_location_city_selector"
        android:background="@drawable/border"/>

    <Button
        style="@style/bus_city"
        android:id="@+id/btn_kirilovka"
        android:onClick="Kirilovka"
        android:text="@string/bus_vesele_kirilovka"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_location_city_selector"
        android:background="@drawable/border"/>

    <Button
        style="@style/bus_city"
        android:id="@+id/btn_bogdanovka"
        android:onClick="Bogdanovka"
        android:text="@string/bus_vesele_bogdanovka"
        android:drawableLeft="@drawable/ic_location_city_selector"
        android:background="@drawable/border"/>

    <Button
        android:id="@+id/btn_zp_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Zp_back"
        android:text="@string/bus_zp_vesele"
        android:gravity="right|center_vertical"
        android:textSize="@dimen/title_city_bus"
        android:paddingEnd="@dimen/padding_bus"
        android:paddingRight="@dimen/padding_bus"
        android:drawableLeft="@drawable/ic_location_city_selector"
        android:background="@drawable/border"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"/>

    <Button
        android:id="@+id/btn_melitopol_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Melitopol_back"
        android:text="@string/bus_melitopol_vesele"
        android:gravity="right|center_vertical"
        android:textSize="@dimen/title_city_bus"
        android:paddingEnd="@dimen/padding_bus"
        android:paddingRight="@dimen/padding_bus"
        android:drawableLeft="@drawable/ic_location_city_selector"
        android:background="@drawable/border"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"/>




</LinearLayout>
</ScrollView>