<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/myview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.all_organization.Watercanal">

    <Button
        android:id="@+id/btn_repairs"
        style="@style/services_button"
        android:drawableLeft="@drawable/ic_water_blue_24dp"
        android:text="@string/watercanal"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/watercanal_more"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watercanal_adress"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:paddingLeft="5dp"
            android:text="@string/watercanal_adress_more"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watercanal_director"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:paddingLeft="5dp"
            android:text="@string/watercanal_director_more"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watercanal_tel"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:paddingLeft="5dp"
            android:text="@string/watercanal_tel_more"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="10dp"
            android:text="@string/watercanal_text_button_add"
            android:drawableLeft="@drawable/ic_library_add_grean_24dp"
            android:drawablePadding="5sp"
            android:gravity="center|center_vertical"
            android:onClick="btnTestify"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="12dp"
        android:text="*показания нужно подавать, до 25 числа, текущего месяца."/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:text="@string/watercanal_text_button_site"
        android:drawableLeft="@drawable/ic_site_24dp"
        android:gravity="center|center_vertical"
        android:onClick="btnSite"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:text="@string/watercanal_text_button_renew"
            android:drawableLeft="@drawable/ic_autorenew_green_24dp"
            android:gravity="center|center_vertical"
            android:onClick="btnCreateNotification"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="12dp"
            android:text="*при перезагрузке устройства, смартфон очищает все напоминания, если перестало срабативать напоминание, нажми обновить напоминание."/>
    </LinearLayout>


</LinearLayout>

</ScrollView>