<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ServicesActivity">

    <ScrollView
        android:id="@+id/myview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_add_services"
                    style="@style/services_button"
                    android:background="@drawable/border"
                    android:drawableLeft="@drawable/ic_library_add_grean_24dp"
                    android:onClick="btnAddServices"
                    android:stateListAnimator="@animator/selector_animator_two"
                    android:text="Добавить услугу" />
            </LinearLayout>

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:columnCount="2"
                app:orientation="horizontal">

                <Button
                    android:id="@+id/btn_repairs"
                    style="@style/services_button_two"
                    android:drawableTop="@drawable/repairs"
                    android:onClick="btnRepairs"
                    android:text="@string/repairs"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btn_home_master"
                    style="@style/services_button_two"
                    android:drawableTop="@drawable/home_master"
                    android:onClick="btnHomeMaster"
                    android:text="@string/home_master"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btn_builder"
                    style="@style/services_button_two"
                    android:drawableTop="@drawable/builder"
                    android:onClick="btnBuilder"
                    android:text="@string/builder"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btn_tutors"
                    style="@style/services_button_two"
                    android:drawableTop="@drawable/tutors"
                    android:onClick="btnTutors"
                    android:text="@string/tutors"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btn_business"
                    style="@style/services_button_two"
                    android:drawableTop="@drawable/business"
                    android:onClick="btnBusiness"
                    android:text="@string/business"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btn_domestic"
                    style="@style/services_button_two"
                    android:drawableTop="@drawable/domestic"
                    android:onClick="btnDomestic"
                    android:text="@string/domestic"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btn_car"
                    style="@style/services_button_two"
                    android:drawableTop="@drawable/car"
                    android:onClick="btnCar"
                    android:text="@string/car"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btn_beauty"
                    style="@style/services_button_two"
                    android:drawableTop="@drawable/beauty"
                    android:onClick="btnBeauty"
                    android:text="@string/beauty"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btn_organization_of_holidays"
                    style="@style/services_button_two"
                    android:drawableTop="@drawable/organization_of_holidays"
                    android:onClick="btnBeauty"
                    android:text="@string/organization_of_holidays"
                    app:layout_columnWeight="1" />

            </android.support.v7.widget.GridLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/bottom_navigation_view"/>

</android.support.constraint.ConstraintLayout>