<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.artimanton.infovesele.activity.TransportActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"
        android:orientation="vertical"
        android:id="@+id/transport_layout">

        <Button
            android:id="@+id/btn_buses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_bus"
            android:gravity="center|center_vertical"
            android:elevation="4dp"
            android:onClick="btBuses"
            android:paddingLeft="10dp"
            android:text="@string/title_activity_tr_bus"
            android:textSize="@dimen/title_transport"/>

        <Button
            android:id="@+id/btn_trains"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_train"
            android:gravity="center|center_vertical"
            android:onClick="btTrains"
            android:paddingLeft="10dp"
            android:text="@string/title_activity_train"
            android:textSize="@dimen/title_transport"/>

        <Button
            android:id="@+id/btn_taxi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_local_taxi_black_48dp"
            android:gravity="center|center_vertical"
            android:onClick="btTaxi"
            android:paddingLeft="10dp"
            android:text="@string/title_activity_taxi"
            android:textSize="@dimen/title_transport"/>

        <Button
            android:id="@+id/btn_freight_taxi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_delivery_service_black_24dp"
            android:gravity="center|center_vertical"
            android:onClick="btFreightTaxi"
            android:paddingLeft="10dp"
            android:text="@string/title_activity_freight_taxi"
            android:textSize="@dimen/title_transport"/>

        <Button
            android:id="@+id/btn_delivery_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_delivery_service_48dp"
            android:gravity="center|center_vertical"
            android:onClick="btDelivery"
            android:paddingLeft="10dp"
            android:text="@string/title_activity_delivery_service"
            android:textSize="@dimen/title_transport"/>

        <Button
            android:id="@+id/btn_fueling_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_ev_station_black_24dp"
            android:gravity="center|center_vertical"
            android:onClick="btFueling"
            android:paddingLeft="10dp"
            android:text="@string/title_activity_fueling_service"
            android:textSize="@dimen/title_transport"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/img_wikonda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"/>
    </LinearLayout>

</ScrollView>
    <include layout="@layout/bottom_navigation_view"/>

</android.support.constraint.ConstraintLayout>


